--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -3,11 +3,20 @@
   <appSettings>
     <add key="filePath" value="C:\data\TournamentTracker"/>
     <add key="greaterWins" value="1"/>
+    <add key="senderEmail" value="lars.meske@gmx.de"/>
+    <add key="senderDisplayName" value="Lars Meske"/>
   </appSettings>
     
   <connectionStrings>
     <add name="Tournaments" connectionString="Server=LARS-PC;Database=Tournaments;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network">
+        <network host="127.0.0.1" userName="Lars" password="testing" port="25" enableSsl="false"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
